2014-02-13  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added eax-aes128.c
	eax-aes128-meta.c.
	* examples/nettle-benchmark.c: Include eax.h.
	* nettle-meta.h (nettle_eax_aes128): Declare, moved from
	nettle-internal.h.
	* eax.h: Declare eax_aes128_ctx and related functions. Moved from
	nettle-internal.h
	(EAX_IV_SIZE): New constant.
	* eax-aes128-meta.c (nettle_eax_aes128): Moved definition to new
	file.
	* eax-aes128.c (eax_aes128_set_key, eax_aes128_set_nonce)
	(eax_aes128_update, eax_aes128_encrypt, eax_aes128_decrypt)
	(eax_aes128_digest): Moved functions to a new file.
	* nettle-internal.c: ... from old location.
	* nettle-internal.h: Moved eax declarations elsewhere.

	* tools/nettle-pbkdf2.c (main): Added missing deallocation.

2014-02-12  Niels Möller  <nisse@lysator.liu.se>

	* chacha-poly1305.h: New file.
	* chacha-poly1305.c: New file.
	* chacha-poly1305-meta.c (nettle_chacha_poly1305): New file, new
	aead algorithm.
	* nettle-meta.h (nettle_chacha_poly1305): Declare.

	* Makefile.in (nettle_SOURCES): Added chacha-poly1305.c and
	chacha-poly1305-meta.c.
	(HEADERS): Added chacha-poly1305.h.

	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added
	chacha-poly1305-test.c.
	* testsuite/chacha-poly1305-test.c: New file.

	* nettle-meta.h (struct nettle_aead): New generalized version
	if this struct.
	(nettle_gcm_aes128, nettle_gcm_aes192, nettle_gcm_aes256)
	(nettle_eax_aes128): Declare, moved from nettle-internal.h.
	* nettle-internal.h (struct nettle_aead): Deleted struct, moved to
	nettle-meta.h. Deleted declarations of unused instances.
	(_NETTLE_AEAD): Deleted macro.
	* nettle-internal.c (nettle_eax_aes128): Updated for new
	nettle_aead struct.
	(nettle_gcm_aes128, nettle_gcm_aes192, nettle_gcm_aes256):
	Deleted, moved to new files.
	* gcm-aes128-meta.c (nettle_gcm_aes128): Moved to new file,
	updated for new nettle_aead struct.
	* gcm-aes192-meta.c (nettle_gcm_aes192): Likewise.