@@ -1,0 +1,180 @@
+/* aead-decrypt.c
+ */
+
+/* nettle, low-level cryptographics library
+ *
+ * Copyright (C) 2014 Niels Möller
+ *
+ * The nettle library is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or (at your
+ * option) any later version.
+ *
+ * The nettle library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+ * License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with the nettle library; see the file COPYING.LIB.  If not, write to
+ * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+ * MA 02111-1301, USA.
+ */
+
+#if HAVE_CONFIG_H
+# include "config.h"
+#endif
+
+#include <assert.h>
+#include <string.h>
+
+#include "aead.h"
+
+#include "buffer.h"
+#include "nettle-internal.h"
+#include "nettle-meta.h"
+
+#define GET_BUF(aead, ctx) \
+  ((uint8_t *)((char *) (ctx) + (aead)->context_size))
+
+/* Needs a buffer of digest_size + block_size - 1 bytes. Let this be
+   followed by an uint8_t buffer index; using a small type avoids
+   alignment issues. */
+
+size_t
+aead_decrypt_ctx_size (const struct nettle_aead *aead)
+{
+  return aead->context_size + aead->block_size + aead->digest_size;
+}
+
+void
+aead_decrypt_init (const struct nettle_aead *aead,
+		   void *ctx, const uint8_t *nonce)
+{
+  /* The case of unbuffered underlying method not supported. Niether
+     is block sizes larger than 256 bytes. */
+  assert (aead->block_size > 0);
+  assert (aead->block_size <= 256);
+
+  /* Allow NULL nonce, for the case that the caller already has done
+     that. E.g., if the application uses a nonce size different from
+     aead->nonce_size. */
+  if (nonce)
+    aead->set_nonce (ctx, nonce);
+
+  /* Initialize buffer index. */
+  GET_BUF (aead, ctx)[aead->block_size + aead->digest_size - 1] = 0;
+}
+
+size_t
+aead_decrypt (const struct nettle_aead *aead,
+	      void *ctx, struct nettle_buffer *buffer,
+	      size_t size, const uint8_t *gibberish)
+{
+  uint8_t *buf;
+  uint8_t *dst;
+  uint8_t left_over;
+  size_t done;
+  
+  buf = GET_BUF (aead, ctx);
+  left_over = buf[aead->block_size + aead->digest_size-1];
+  assert (left_over < aead->block_size + aead->digest_size);
+
+  done = 0;
+  /* First try to process buffered data, one block at a time. */
+  while (left_over > 0
+	 && left_over + size >= aead->block_size + aead->digest_size)
+    {
+      dst = nettle_buffer_space (buffer, aead->block_size);
+      if (!dst)
+	return done;
+
+      if (left_over < aead->block_size)
+	{
+	  unsigned part = aead->block_size - left_over;
+
+	  memcpy (buf + left_over, gibberish, part);
+	  aead->decrypt (ctx, aead->block_size, dst, buf);
+	  done += part;
+	  size -= part;
+	  
+	  left_over = 0;
+	}
+      else
+	{
+	  aead->decrypt (ctx, aead->block_size, dst, buf);
+	  left_over -= aead->block_size;
+	  memmove (buf, buf + aead->block_size, left_over);
+	}
+    }
+      
+  if (left_over + size < aead->block_size + aead->digest_size)
+    {
+      /* Buffer new data */
+      assert (left_over + size < aead->block_size + aead->digest_size);
+      memcpy (buf + left_over, gibberish, size);
+      buf[aead->block_size + aead->digest_size-1] = left_over + size;
+      return done + size;
+    }
+  assert (left_over == 0);
+  assert (size >= aead->digest_size);
+
+  size -= aead->digest_size;
+  left_over = size % aead->block_size;
+  size -= left_over;
+
+  dst = nettle_buffer_space (buffer, size);
+  if (!dst)
+    {
+      /* Process as many blocks as possible, without growing the
+	 buffer. */
+      size_t avail = (buffer->alloc - buffer->size);
+      avail -= (avail % aead->block_size);
+      assert (avail < size);
+      size = avail;
+      left_over = 0;
+      dst = nettle_buffer_space (buffer, size);
+      assert (dst != NULL);
+    }
+  aead->encrypt (ctx, size, dst, gibberish);
+  done += size;
+
+  /* Buffer left over + potential digest */
+  left_over += aead->digest_size;
+  memcpy (buf, gibberish + size, left_over);
+  buf[aead->block_size + aead->digest_size - 1] = left_over;
+
+  done += left_over;
+  return done;
+}
+
+size_t
+aead_decrypt_final_size (const struct nettle_aead *aead)
+{
+  return aead->block_size - 1;
+}
+
+int
+aead_decrypt_final (const struct nettle_aead *aead,
+		    void *ctx, struct nettle_buffer *buffer)
+{
+  TMP_DECL (digest, uint8_t, NETTLE_MAX_HASH_DIGEST_SIZE);
+  const uint8_t *buf = GET_BUF (aead, ctx);
+  uint8_t *dst;
+  unsigned left_over = buf[aead->block_size - 1];
+  assert (left_over < aead->block_size + aead->digest_size);
+  
+  if (left_over < aead->digest_size)
+    /* Too short */
+    return 0;
+  left_over -= aead->digest_size;
+  dst = nettle_buffer_space (buffer, left_over);
+  if (!dst)
+    return 0;
+
+  aead->encrypt (ctx, left_over, dst, buf);
+
+  TMP_ALLOC (digest, aead->digest_size);  
+  aead->digest (ctx, aead->digest_size, digest);
+  return memcmp (buf + left_over, digest, aead->digest_size) == 0;
+}
