@@ -1,3 +1,13 @@
+2014-02-14  Niels Möller  <nisse@lysator.liu.se>
+
+	* aead.h: New file.
+	* aead-encrypt.c: New file.
+	* aead-decrypt.c: New file.
+	* aead-encrypt-msg.c: New file.
+	* aead-decrypt-msg.c: New file.
+	* Makefile.in (nettle_SOURCES): Added new source files.
+	(HEADERS): Added aead.h.
+
 2014-02-13  Niels Möller  <nisse@lysator.liu.se>
 
 	* Makefile.in (nettle_SOURCES): Added eax-aes128.c
